[tool.poetry]
name = "repl-nix-gpufixer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.44.2"
torchaudio = "^2.4.1"
colorama = "^0.4.6"
sentencepiece = "^0.2.0"
gitpython = "^3.1.43"
torchvision = "^0.19.1"
accelerate = "^0.34.2"
markdown = "^3.7"
mdtex2html = "^1.3.0"
torch = "^2.4.1"
gradio = "^4.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
